now movies wrap correctly

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,13 +29,10 @@ body {
   );
   background-repeat: repeat;
   background-attachment: fixed;
-  height: 100%;
 }
 
 .App {
   display: flex;
-  width: 100%;
-  white-space: break-spaces;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -44,7 +41,9 @@ body {
 
 .movies {
   display: flex;
-  gap: 18px;
+  max-width: 80vw;
+  flex-wrap: wrap;
+  gap: 28px;
   color: white;
 }
 
